k8s/11-payment-processor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-processor
  namespace: payments
  labels:
    app: payment-processor
spec:
  type: ClusterIP
  selector:
    app: payment-processor
  ports:
    - name: http
      port: 8080
      targetPort: http
